add correct files for prepare data old

--- a/compare-difference.ipynb
+++ b/compare-difference.ipynb
@@ -51,6 +51,103 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## learning pipline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Use device: gpu\n",
+      "---\n",
+      "Loading: tokenize\n",
+      "With settings: \n",
+      "{'model_path': '/home/pengfei/stanfordnlp_resources/en_ewt_models/en_ewt_tokenizer.pt', 'lang': 'en', 'shorthand': 'en_ewt', 'mode': 'predict'}\n",
+      "---\n",
+      "Loading: pos\n",
+      "With settings: \n",
+      "{'model_path': '/home/pengfei/stanfordnlp_resources/en_ewt_models/en_ewt_tagger.pt', 'pretrain_path': '/home/pengfei/stanfordnlp_resources/en_ewt_models/en_ewt.pretrain.pt', 'lang': 'en', 'shorthand': 'en_ewt', 'mode': 'predict'}\n",
+      "---\n",
+      "Loading: lemma\n",
+      "With settings: \n",
+      "{'model_path': '/home/pengfei/stanfordnlp_resources/en_ewt_models/en_ewt_lemmatizer.pt', 'lang': 'en', 'shorthand': 'en_ewt', 'mode': 'predict'}\n",
+      "Building an attentional Seq2Seq model...\n",
+      "Using a Bi-LSTM encoder\n",
+      "Using soft attention for LSTM.\n",
+      "Finetune all embeddings.\n",
+      "[Running seq2seq lemmatizer with edit classifier]\n",
+      "---\n",
+      "Loading: depparse\n",
+      "With settings: \n",
+      "{'model_path': '/home/pengfei/stanfordnlp_resources/en_ewt_models/en_ewt_parser.pt', 'pretrain_path': '/home/pengfei/stanfordnlp_resources/en_ewt_models/en_ewt.pretrain.pt', 'lang': 'en', 'shorthand': 'en_ewt', 'mode': 'predict'}\n",
+      "Done loading processors!\n",
+      "---\n"
+     ]
+    }
+   ],
+   "source": [
+    "import stanfordnlp\n",
+    "nlp = stanfordnlp.Pipeline()\n",
+    "doc = nlp(open('/home/pengfei/data/trial/raw_train/wsj_1000').read())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Kemper', '4', 'compound')\n",
+      "('Financial', '4', 'compound')\n",
+      "('Services', '4', 'compound')\n",
+      "('Inc.', '0', 'root')\n",
+      "(',', '4', 'punct')\n",
+      "('charging', '4', 'acl')\n",
+      "('that', '11', 'mark')\n",
+      "('program', '9', 'compound')\n",
+      "('trading', '11', 'nsubj')\n",
+      "('is', '11', 'aux')\n",
+      "('ruining', '6', 'ccomp')\n",
+      "('the', '14', 'det')\n",
+      "('stock', '14', 'compound')\n",
+      "('market', '11', 'obj')\n",
+      "(',', '11', 'punct')\n",
+      "('cut', '11', 'advcl')\n",
+      "('off', '16', 'compound:prt')\n",
+      "('four', '22', 'nummod')\n",
+      "('big', '22', 'amod')\n",
+      "('Wall', '21', 'compound')\n",
+      "('Street', '22', 'compound')\n",
+      "('firms', '16', 'obj')\n",
+      "('from', '24', 'mark')\n",
+      "('doing', '16', 'advcl')\n",
+      "('any', '24', 'obj')\n",
+      "('of', '31', 'case')\n",
+      "('its', '31', 'nmod:poss')\n",
+      "('stock', '30', 'compound')\n",
+      "('-', '30', 'punct')\n",
+      "('trading', '31', 'compound')\n",
+      "('business', '25', 'nmod')\n",
+      "('.', '4', 'punct')\n"
+     ]
+    }
+   ],
+   "source": [
+    "doc.sentences[2].print_dependencies()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
