finish the skeleton for data --without testing

--- a/char_off_set.ipynb
+++ b/char_off_set.ipynb
@@ -2,12 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 316,
    "metadata": {},
    "outputs": [],
    "source": [
     "import spacy,en_core_web_sm\n",
     "from pathlib import Path\n",
+    "import math\n",
+    "import pandas as pd\n",
+    "import os\n",
     "tokenizor = en_core_web_sm.load()"
    ]
   },
@@ -84,15 +87,6 @@
    "source": [
     "# character offset in a sentence\n",
     "list(k.sent).index(k)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 159,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd"
    ]
   },
   {
@@ -464,7 +458,9 @@
   {
    "cell_type": "code",
    "execution_count": 297,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -511,14 +507,12 @@
     }
    ],
    "source": [
-    "import math\n",
+    "\n",
     "for i in range(100):\n",
     "    if pdtb2.loc[i, 'Relation'] == 'Explicit':\n",
     "        print(type(pdtb2.loc[i, 'Connective_SpanList']) == str)\n",
     "    if pdtb2.loc[i, 'Relation'] == 'Implicit':\n",
-    "        print(pdtb2.loc[i, 'Relation'], pdtb2.loc[i, 'Conn1'])\n",
-    "        \n",
-    "'ConnHeadSemClass1'"
+    "        print(pdtb2.loc[i, 'Relation'], pdtb2.loc[i, 'Conn1'])"
    ]
   },
   {
@@ -538,48 +532,145 @@
     }
    ],
    "source": [
-    "\"\"\"\n",
-    "Returns: \n",
-    "        argument index list for that word\"\"\"\n",
-    "def get_linker(word_character_index, word, dictionary):\n",
+    "def get_linker(words, doc_lookup):\n",
+    "    \"\"\"get look up for each word per doc level\n",
+    "    Args:\n",
+    "            word(dict): {word_index_in_doc: [word_start_char, word_end_char]}\n",
+    "            doc_lookup: from function @get_data_prototype\n",
+    "    Returns: \n",
+    "            ret: {word_index_in_doc: 'arg1_argID'} \n",
+    "    \"\"\"\n",
+    "    lookup_list = doc_lookup.keys()\n",
+    "    ret = {}\n",
+    "    \n",
+    "    for w_idx, w_range in words.iteritems():\n",
+    "        w_linkers = []\n",
+    "        for r in doc_lookup.keys():\n",
+    "            if _in_between_(w_range, r):\n",
+    "                linker = doc_lookup[r][0]\n",
+    "                w_linkers.append(linker)\n",
+    "        ret[w_idx] = w_linkers\n",
+    "    return ret\n",
     "\n",
-    "\"\"\"\n",
-    "Returns:\n",
-    "        list of index with all the file with the same format in that batch\"\"\"\n",
+    "def _in_between(inner_list, outer_list):\n",
+    "    return (inner_list[0] >= outer_list[0]) & (inner_list[1] <= outer_list[1])\n",
+    "    \n",
     "def get_batch(section, filenumber):\n",
-    "\n",
-    "\"\"\"\n",
-    "Returns:\n",
-    "        dictionary contains all the span for argument 1 or argument 2\n",
-    "        {[34, 45]: [\"arg1_1234\", \"arg2_1235\"]}\"\"\"\n",
-    "def get_linker_lookup():\n",
+    "    \"\"\"Returns list of index with all the file with the same format in that batch\"\"\"\n",
+    "    return pdtb2.index(pdtb2['Section'] == section & pdtb2['filenumber'] == filenumber).tolist()\n",
+    "        \n",
     "    \n",
-    "\"\"\"\n",
-    "Returns:\n",
-    "        a list with character span in it\n",
-    "        if one arg has one segment: [[34,96]]\n",
-    "        if one arg has two segment: example [[34, 96], [97, 101]]\"\"\"\n",
-    "def get_span_list(string):\n",
-    "    \n",
+    "def _get_span_list(span):\n",
+    "    \"\"\"\n",
+    "    Args:\n",
+    "            span(str): \"34..96;97..101\"\n",
+    "    Returns:\n",
+    "            ret(list[list]):\n",
+    "            if one arg has one segment: [[34,96]]\n",
+    "            if one arg has two segment: example [[34, 96], [97, 101]]\n",
+    "    \"\"\"\n",
+    "    spans = span.split(';')\n",
+    "    return [o.split('..') for o in spans]\n",
+    "        \n",
     "\n",
-    "\"\"\"\n",
-    "Returns:\n",
-    "        {\"Arg1\": {\"CharacterSpanList\": [[4564, 4610]], \n",
-    "        \"RawText\": \"\", \n",
-    "        \"TokenList\": []}, # example: [4612, 4616, 888, 32, 11]\n",
-    "        \"DocID\": \"wsj_1000\", \n",
-    "        \"ID\": 15025, \n",
-    "        \"Sense\": [\"Contingency.Condition\"], \n",
-    "        \"Type\": \"Explicit\"},\n",
-    "        {}, ...]\n",
-    "\"\"\"\n",
-    "def get_data_prototype(section, filenumber):\n",
-    "    batch = get_batch(section, filenumber)\n",
-    "    ret = []\n",
-    "    for sentence in batch:\n",
-    "        arg1_span = \n",
-    "        arg1_char_span_list = get_span_list()"
+    "def get_data_prototype(section, filenumber, relation_id):\n",
+    "    \"\"\"\n",
+    "    Args:\n",
+    "            relation_id(int): relation_id is unique accross every relation\n",
+    "    Returns:\n",
+    "            doc_data: [{\"Arg1\": {\"CharacterSpanList\": [[4564, 4610]], \n",
+    "                \"RawText\": \"\", \n",
+    "                \"TokenList\": []}, # example: [4612, 4616, 888, 32, 11]\n",
+    "                \"DocID\": \"wsj_1000\", \n",
+    "                \"ID\": 15025, \n",
+    "                \"Sense\": [\"Contingency.Condition\"], \n",
+    "                \"Type\": \"Explicit\"},\n",
+    "                {}, ...]\n",
+    "            doc_lookup: dictionary contains all the span for argument 1 or argument 2 or conn\n",
+    "                used for function @get_linker\n",
+    "                {[34, 45]: [\"arg1_1234\"]}\n",
+    "                \n",
+    "            \n",
+    "    \"\"\"\n",
+    "    batch_idx = get_batch(section, filenumber)\n",
+    "    doc_data = []\n",
+    "    doc_lookup = {}\n",
+    "    for idx in batch_idx:\n",
+    "        arg1_span = pdtb2.loc[idx, 'Arg1_SpanList']\n",
+    "        arg1_char_span_list = _get_span_list(arg1_span)\n",
+    "        arg1_rawtext = pdtb2.loc[idx, 'Arg1_RawText']\n",
+    "        arg1_token_list = []\n",
+    "        \n",
+    "        arg2_span = pdtb2.loc[idx, 'Arg2_SpanList']\n",
+    "        arg2_char_span_list = _get_span_list(arg2_span)\n",
+    "        arg2_rawtext = pdtb2.loc[idx, 'Arg2_RawText']\n",
+    "        arg2_token_list = []\n",
+    "        \n",
+    "        conn_span = pdtb2.loc[idx, 'Connective_SpanList']\n",
+    "        conn_char_span_list = _get_span_list(conn_span)\n",
+    "        conn_rawtext = pdtb2.loc[idx, 'Connective_RawText']\n",
+    "        conn_token_list = []\n",
+    "        \n",
+    "        relation_type = pdtb2.loc[idx, 'Relation']\n",
+    "        relation_sense = [pdtb2.loc[idx, 'ConnHeadSemClass1']]\n",
+    "        if type(pdtb2.loc[idx, 'ConnHeadSemClass2']) == str:\n",
+    "            relation_sense.append(pdtb2.loc[idx, 'ConnHeadSemClass2'])\n",
+    "        Doc_id = section + '/' + filenumber\n",
+    "        ID = relation_id+idx\n",
+    "        \n",
+    "        doc_lookup[arg1_char_span_list] = 'arg1_' + ID\n",
+    "        doc_lookup[arg2_char_span_list] = 'arg2_' + ID\n",
+    "        doc_lookup[conn_char_span_list] = 'conn_' + ID\n",
+    "        \n",
+    "        arg1 = {\"CharacterSpanList\": arg1_char_span_list, \"RawText\": arg1_rawtext, \"TokenList\": arg1_token_list}\n",
+    "        arg2 = {\"CharacterSpanList\": arg2_char_span_list, \"RawText\": arg2_rawtext, \"TokenList\": arg2_token_list}\n",
+    "        conn = {\"CharacterSpanList\": conn_span, \"RawText\" = conn_rawtext, \"TokenList\": conn_token_list}\n",
+    "        relation_dict = {\"Arg1\": arg1, \"Arg2\": arg2, \"DocID\": Doc_id, \"ID\": ID, \n",
+    "                      \"Sense\": relation_sense, \"Type\": relation_type}\n",
+    "        doc_data.append(relation_dict)\n",
+    "        \n",
+    "    return doc_data, doc_lookup"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 314,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_section(data_path):\n",
+    "    \"\"\"return {section_num: [filenum1, filenum2...]}\"\"\"\n",
+    "    sections = os.listdir(data_path)\n",
+    "    ret = {}\n",
+    "    for sec in sections:\n",
+    "        ret[sec] = os.listdir(data_path/sec)\n",
+    "    return ret"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 320,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "25"
+      ]
+     },
+     "execution_count": 320,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
