finish implementing the functions, will finish todos and debug

--- a/prepare-parse-n-data.ipynb
+++ b/prepare-parse-n-data.ipynb
@@ -11,6 +11,10 @@
     "import math\n",
     "import pandas as pd\n",
     "import os\n",
+    "from stanfordcorenlp import StanfordCoreNLP\n",
+    "import re\n",
+    "import json\n",
+    "nlp = StanfordCoreNLP(r'/home/pengfei/documents/stanford-corenlp-full-2018-10-05/')\n",
     "tokenizor = en_core_web_sm.load()"
    ]
   },
@@ -332,22 +336,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def read_file(data_path, section, file_number):\n",
-    "    filename = 'wsj_{0:04}'.format(int(file_number))\n",
-    "    section = '{0:02}'.format(int(section))\n",
-    "    with open(data_path/section/filename) as f:\n",
-    "        file = f.read()\n",
-    "    return file\n",
-    "\n",
-    "file_content = read_file(DATA_PATH, '0', '96')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 241,
    "metadata": {},
    "outputs": [],
@@ -393,15 +381,6 @@
     "for span in arg2_spanlist: \n",
     "    spanlist = span.split('..')\n",
     "    arg2.append(file_content[int(spanlist[0]): int(spanlist[1])])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 244,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## ['Nevertheless', 'yields \"may blip up again']"
    ]
   },
   {
@@ -517,28 +496,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'ConnHeadSemClass1'"
-      ]
-     },
-     "execution_count": 270,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def get_linker(words, doc_lookup):\n",
-    "    \"\"\"get look up for each word per doc level\n",
+    "    ## TODO: connective also has linker\n",
+    "    \"\"\"\n",
+    "    get look up for each word per doc level, if word does not below to any arg, it will append []\n",
     "    Args:\n",
-    "            word(dict): {word_index_in_doc: [word_start_char, word_end_char]}\n",
+    "            words(dict): {word_index_in_doc: [word_start_char, word_end_char]}\n",
     "            doc_lookup: from function @get_data_prototype\n",
     "    Returns: \n",
-    "            ret: {word_index_in_doc: 'arg1_argID'} \n",
+    "            ret: {word_index_in_doc: ['arg1_argID', 'arg2_argID', ...]}\n",
     "    \"\"\"\n",
     "    lookup_list = doc_lookup.keys()\n",
     "    ret = {}\n",
@@ -573,10 +543,13 @@
     "    return [o.split('..') for o in spans]\n",
     "        \n",
     "\n",
-    "def get_data_prototype(section, filenumber, relation_id):\n",
+    "def get_data_prototype(section, filenumber, relation_id, batch_idx):\n",
     "    \"\"\"\n",
     "    Args:\n",
-    "            relation_id(int): relation_id is unique accross every relation\n",
+    "            section(str)\n",
+    "            filenumber(str)\n",
+    "            relation_id(int): relation_id is unique accross every relation, this is start relation_id\n",
+    "            batch_idx(list[int]): list of corresponding int from same file\n",
     "    Returns:\n",
     "            doc_data: [{\"Arg1\": {\"CharacterSpanList\": [[4564, 4610]], \n",
     "                \"RawText\": \"\", \n",
@@ -592,7 +565,7 @@
     "                \n",
     "            \n",
     "    \"\"\"\n",
-    "    batch_idx = get_batch(section, filenumber)\n",
+    "#     batch_idx = get_batch(section, filenumber)\n",
     "    doc_data = []\n",
     "    doc_lookup = {}\n",
     "    for idx in batch_idx:\n",
@@ -624,46 +597,201 @@
     "        \n",
     "        arg1 = {\"CharacterSpanList\": arg1_char_span_list, \"RawText\": arg1_rawtext, \"TokenList\": arg1_token_list}\n",
     "        arg2 = {\"CharacterSpanList\": arg2_char_span_list, \"RawText\": arg2_rawtext, \"TokenList\": arg2_token_list}\n",
-    "        conn = {\"CharacterSpanList\": conn_span, \"RawText\" = conn_rawtext, \"TokenList\": conn_token_list}\n",
+    "        conn = {\"CharacterSpanList\": conn_span, \"RawText\": conn_rawtext, \"TokenList\": conn_token_list}\n",
     "        relation_dict = {\"Arg1\": arg1, \"Arg2\": arg2, \"DocID\": Doc_id, \"ID\": ID, \n",
     "                      \"Sense\": relation_sense, \"Type\": relation_type}\n",
     "        doc_data.append(relation_dict)\n",
     "        \n",
-    "    return doc_data, doc_lookup"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 314,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_section(data_path):\n",
-    "    \"\"\"return {section_num: [filenum1, filenum2...]}\"\"\"\n",
+    "    return doc_data, doc_lookup\n",
+    "\n",
+    "def _get_files(data_path=DATA_PATH):\n",
+    "    \"\"\"Returns (list) [('00', 'wsj_0000'), ..., ('24', 'wsj_2400']\"\"\"\n",
     "    sections = os.listdir(data_path)\n",
     "    ret = {}\n",
     "    for sec in sections:\n",
     "        ret[sec] = os.listdir(data_path/sec)\n",
-    "    return ret"
+    "    return ret\n",
+    "\n",
+    "def read_file(section, filename, data_path=DATA_PATH):\n",
+    "    \"\"\"Returns the content in that file\"\"\"\n",
+    "    with open(data_path/section/filename) as f:\n",
+    "        file = f.read()\n",
+    "    return file"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 320,
+   "execution_count": 340,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "25"
-      ]
-     },
-     "execution_count": 320,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
+   "outputs": [],
+   "source": [
+    "def constituent_parsing(sent):\n",
+    "    return nlp.parse(sentence).replace('ROOT', \" \").replace('\\n', '').replace(' ', '')\n",
+    "\n",
+    "def dependency_parse(sent):\n",
+    "    s = tokenizor(sent)\n",
+    "    tokens = [token.text for token in s]\n",
+    "    tokens.insert(0,'ROOT')\n",
+    "    dependency = []\n",
+    "    for tag, start, end in nlp.dependency_parse(sent):\n",
+    "        dependency.append([tag, f'{tokens[start]}-{start}', f'{tokens[end]}-{end}'])\n",
+    "    return dependency\n",
+    "\n",
+    "def pdtb_to_json(folder, name):\n",
+    "    p = Path(folder)\n",
+    "    with open(p/name) as f:\n",
+    "        file = f.read()\n",
+    "        doc = tokenizor(file)\n",
+    "\n",
+    "        sentences = []\n",
+    "        for idno, sent in enumerate(doc.sents):\n",
+    "            sent = str(sent)\n",
+    "            if idno == 0:\n",
+    "                continue\n",
+    "            dependencies = dependency_parse(sent)\n",
+    "            parsetree = constituent_parsing(sent)\n",
+    "\n",
+    "            words = []\n",
+    "            sent_index = file.index(sent)\n",
+    "            for token in tokenizor(sent):\n",
+    "                begin = sent_index+token.idx\n",
+    "                token_dict = {'CharacterOffsetBegin':begin, \"CharacterOffsetEnd\": begin+len(token)}\n",
+    "                words.append([token.text, token_dict])\n",
+    "            sentences.append({\"dependencies\": dependencies, \"parsetree\": parsetree, \"words\": words})\n",
+    "    return json.dumps({name: {\"sentences\": sentences}})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 335,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_word_index(doc):\n",
+    "    \"\"\"\n",
+    "    Args:\n",
+    "            doc: after tokenized document\n",
+    "    Returns: \n",
+    "            words(dict): {word_index_in_doc: [word_start_char, word_end_char]}\n",
+    "    \"\"\"\n",
+    "    words = {}\n",
+    "    for tok in doc:\n",
+    "        words[tok.i] = [tok.idx, tok.idx+len(tok)]\n",
+    "    return words\n",
+    "\n",
+    "def add_token_list(doc_data, linkers, token_list):\n",
+    "    \"\"\"\n",
+    "    Args: \n",
+    "            doc_data: return value from @function get_data_prototype\n",
+    "            linker(list[str]): [\"arg1_1234\", \"conn_1235\"]\n",
+    "            token_list: append at token_list\n",
+    "    \"\"\"\n",
+    "    for linker in linkers:\n",
+    "        arg_id = linker.split('_')[1]\n",
+    "        \n",
+    "        for rel in doc_data:\n",
+    "            if rel[\"ID\"] == int(arg_id):\n",
+    "                rel[linker.split('_')[0]][\"TokenList\"].append(token_list)\n",
+    "\n",
+    "def data_generator_per_doc(section, filenumber, relation_id, batch_idx, rawtext):\n",
+    "    \"\"\"generate json format data for one document\n",
+    "    Args:\n",
+    "            section(str): 0~24\n",
+    "            filenumber(str): 0~99\n",
+    "            relation_id(int): relation_id is unique accross every relation, this is start relation_id\n",
+    "            batch_idx(list[int]): list of corresponding int from same file\n",
+    "            rawtext(str): rawtext of that doc\n",
+    "    Returns:\n",
+    "            pdtb-json\n",
+    "            pdtb-data\n",
+    "    \"\"\"\n",
+    "    # for data\n",
+    "    doc_data, doc_lookup = get_data_prototype(section, filenumber, relation_id, batch_idx)\n",
+    "    doc = tokenizor(rawtext)\n",
+    "    words = get_word_index(doc)\n",
+    "    linkers = get_linker(words, doc_lookup)\n",
+    "    \n",
+    "    # for parse\n",
+    "    temp = None\n",
+    "    sentences = []\n",
+    "    # for each token in document\n",
+    "    for tok in doc:\n",
+    "        ## TODO: here need to change\n",
+    "        if temp == None:\n",
+    "            temp == True\n",
+    "            continue\n",
+    "        else:\n",
+    "            if str(tok.sent) != temp:\n",
+    "                # end of the previous round\n",
+    "                sentences.append({\"dependencies\": dependencies, \"parsetree\": parsetree, \n",
+    "                                  \"words\": words, \"Linkers\": linkers})\n",
+    "                \n",
+    "                # begin of the new round\n",
+    "                words = []\n",
+    "                temp = str(tok.sent)\n",
+    "                dependencies = dependency_parse(temp)\n",
+    "                parsetree = constituent_parsing(temp)\n",
+    "            \n",
+    "            ## 5 attribute of each word\n",
+    "            char_offset_begin = tok.idx\n",
+    "            char_offset_end = tok.idx + len(tok)\n",
+    "            token_offset_in_doc = tok.i\n",
+    "            sentence_offset = list(doc.sents).index(tok.sent)\n",
+    "            token_offset_in_sent = list(tok.sent).index(tok)\n",
+    "            \n",
+    "            linker = linkers[token_offset_in_doc]\n",
+    "            token_dict = {'CharacterOffsetBegin': char_offset_begin, \n",
+    "                          \"CharacterOffsetEnd\": char_offset_end, \n",
+    "                          \"Linkers\": linker}\n",
+    "            \n",
+    "            token_list = [char_offset_begin, char_offset_end, token_offset_in_doc, \n",
+    "                          sentence_offset, token_offset_in_sent]\n",
+    "            add_linker()\n",
+    "            \n",
+    "#     doc = tokenizor(rawtext)\n",
+    "#     sentences = []\n",
+    "#     for idno, sent in enumerate(doc.sents):\n",
+    "#         sent = str(sent)\n",
+    "#         if idno == 0:\n",
+    "#             continue\n",
+    "#         dependencies = dependency_parse(sent)\n",
+    "#         parsetree = constituent_parsing(sent)\n",
+    "\n",
+    "#         words = []\n",
+    "#         sent_index = file.index(sent)\n",
+    "#         for token in tokenizor(sent):\n",
+    "#             begin = sent_index+token.idx\n",
+    "#             token_dict = {'CharacterOffsetBegin':begin, \"CharacterOffsetEnd\": begin+len(token)}\n",
+    "#             words.append([token.text, token_dict])\n",
+    "#         sentences.append({\"dependencies\": dependencies, \"parsetree\": parsetree, \"words\": words})\n",
+    "\n",
+    "\n",
+    "def data_generator():\n",
+    "    \"\"\"\n",
+    "    Returns:\n",
+    "            docs_parse(dict{docid: parse})\n",
+    "            docs_data(list[relation])\n",
+    "    \"\"\"\n",
+    "    doc_paths = _get_files()\n",
+    "    relation_id = 0\n",
+    "    docs_parse = {}\n",
+    "    docs_data = []\n",
+    "    for doc_path in doc_paths:\n",
+    "        section = doc_path[0]\n",
+    "        filename = doc_path[1]\n",
+    "        rawtext = read_file(section, filename)\n",
+    "        \n",
+    "        section = str(int(section))\n",
+    "        filenumber = filename[-2:]\n",
+    "        batch_idx = get_batch(section, filename)\n",
+    "        \n",
+    "        doc_parse, doc_data = data_generator_per_doc(section, filenumber, relation_id, batch_idx, rawtext)\n",
+    "        relation_id += len(batch_idx)\n",
+    "        \n",
+    "        docs_parse[filename] = doc_parse\n",
+    "        docs_data.extend(doc_data)\n",
+    "    return docs_parse, docs_data"
+   ]
   },
   {
    "cell_type": "code",
