add write functions

--- a/prepare-parse-n-data.ipynb
+++ b/prepare-parse-n-data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,19 +17,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Problems: \n",
+    "    1. from wsj_1001: sentence: \n",
+    "    Rated Ba-3 by Moody's Investors Service Inc. and single-B-plus by Standard & Poor's Corp., the issue will be sold through Merrill Lynch Capital Markets. \n",
+    "    tokenizer separate the sentence to: \"plus by Standard & Poor's Corp."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "nlp = StanfordCoreNLP(r'/home/pengfei/documents/stanford-corenlp-full-2018-10-05/')\n",
     "tokenizor = en_core_web_sm.load()\n",
-    "DATA_PATH = Path(\"/home/pengfei/data/experiment/\")"
+    "DATA_PATH = Path(\"/home/pengfei/data/experiment/\")\n",
+    "PDTB_PARSE = 'pdtb-parse.json'\n",
+    "PDTB_DATA = 'pdtb-data.json'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,18 +222,18 @@
     "    return nlp.parse(sent).replace('ROOT', \" \").replace('\\n', '').replace(' ', '')\n",
     "\n",
     "def dependency_parse(sent):\n",
-    "    s = tokenizor(sent)\n",
-    "    tokens = [token.text for token in s]\n",
+    "    s = nlp.word_tokenize(sent)\n",
+    "    tokens = [token for token in s]\n",
     "    tokens.insert(0,'ROOT')\n",
     "    dependency = []\n",
     "    for tag, start, end in nlp.dependency_parse(sent):\n",
     "        dependency.append([tag, f'{tokens[start]}-{start}', f'{tokens[end]}-{end}'])\n",
-    "    return dependency"
+    "    return dependency\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,32 +356,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 41,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "section:  01  filename:  wsj_0134\n",
-      "section:  01  filename:  wsj_0136\n",
       "section:  01  filename:  wsj_0138\n",
       "section:  01  filename:  wsj_0139\n",
-      "section:  01  filename:  wsj_0130\n",
-      "section:  01  filename:  wsj_0135\n",
-      "section:  01  filename:  wsj_0137\n",
-      "section:  01  filename:  wsj_0131\n",
-      "section:  01  filename:  wsj_0133\n",
-      "section:  01  filename:  wsj_0132\n",
-      "section:  00  filename:  wsj_0004\n",
-      "section:  00  filename:  wsj_0008\n",
       "section:  00  filename:  wsj_0001\n",
-      "section:  00  filename:  wsj_0006\n",
-      "section:  00  filename:  wsj_0009\n",
       "section:  00  filename:  wsj_0002\n",
-      "section:  00  filename:  wsj_0003\n",
-      "section:  00  filename:  wsj_0007\n",
-      "section:  00  filename:  wsj_0005\n"
+      "section:  10  filename:  wsj_1001\n",
+      "section:  10  filename:  wsj_1000\n"
      ]
     }
    ],
@@ -380,13 +381,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(DATA_PATH/'00'/'wsj_0004') as f:\n",
-    "    rawtext = f.read()\n",
-    "batch = get_batch(0, 4)"
+    "dict = json.dumps({\"hello\": \"he said: 'how are you'\"})\n",
+    "with open('test.json', 'a') as f:\n",
+    "    f.write(dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def write_parse(docs_parse, filename=PDTB_PARSE):\n",
+    "    with open(filename, 'w') as f:\n",
+    "        content = json.dumps(docs_parse)\n",
+    "        f.write(content)\n",
+    "\n",
+    "def write_data(relations, filename=PDTB_DATA):\n",
+    "    with open(filename, 'w') as f:\n",
+    "        for relation in relations:\n",
+    "            content = json.dumps(relation)\n",
+    "            f.write(content)\n",
+    "            f.write('\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "write_parse(docs_parse)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "write_data(docs_data)"
    ]
   },
   {
