debugged some error during generating data
Next will convert file to sentence based format

--- a/prepare-parse-n-data.ipynb
+++ b/prepare-parse-n-data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,20 +28,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "nlp = StanfordCoreNLP(r'/home/pengfei/documents/stanford-corenlp-full-2018-10-05/')\n",
     "tokenizor = en_core_web_sm.load()\n",
     "DATA_PATH = Path(\"/home/pengfei/data/experiment/\")\n",
-    "PDTB_PARSE = 'pdtb-parse.json'\n",
+    "PDTB_PARSE = 'pdtb-parses.json'\n",
     "PDTB_DATA = 'pdtb-data.json'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,12 +214,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "def constituent_parsing(sent):\n",
-    "    return nlp.parse(sent).replace('ROOT', \" \").replace('\\n', '').replace(' ', '')\n",
+    "    return nlp.parse(sent).replace('ROOT', \" \").replace('\\n', '').replace('   ', ' ').replace('  ', ' ')\n",
     "\n",
     "def dependency_parse(sent):\n",
     "    s = nlp.word_tokenize(sent)\n",
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +317,7 @@
     "            linker = linkers[token_offset_in_doc]\n",
     "            token_dict = {'CharacterOffsetBegin': char_offset_begin, \"CharacterOffsetEnd\": char_offset_end, \n",
     "                          \"PartOfSpeech\": tok.pos_, \"Linkers\": linker}\n",
-    "            words.append(token_dict)\n",
+    "            words.append([tok.text, token_dict])\n",
     "            \n",
     "            token_list = [char_offset_begin, char_offset_end, token_offset_in_doc, \n",
     "                          sentence_offset, token_offset_in_sent]\n",
@@ -356,7 +356,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def write_parse(docs_parse, filename=PDTB_PARSE):\n",
+    "    with open(filename, 'w') as f:\n",
+    "        content = json.dumps(docs_parse)\n",
+    "        f.write(content)\n",
+    "\n",
+    "def write_data(relations, filename=PDTB_DATA):\n",
+    "    with open(filename, 'w') as f:\n",
+    "        for relation in relations:\n",
+    "            content = json.dumps(relation)\n",
+    "            f.write(content)\n",
+    "            f.write('\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -381,37 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dict = json.dumps({\"hello\": \"he said: 'how are you'\"})\n",
-    "with open('test.json', 'a') as f:\n",
-    "    f.write(dict)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def write_parse(docs_parse, filename=PDTB_PARSE):\n",
-    "    with open(filename, 'w') as f:\n",
-    "        content = json.dumps(docs_parse)\n",
-    "        f.write(content)\n",
-    "\n",
-    "def write_data(relations, filename=PDTB_DATA):\n",
-    "    with open(filename, 'w') as f:\n",
-    "        for relation in relations:\n",
-    "            content = json.dumps(relation)\n",
-    "            f.write(content)\n",
-    "            f.write('\\n')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
